appId: com.buffago.app
name: Cayenne Android permissions
---
- runFlow:
    when:
      visible: "While using the app"
    commands:
      - tapOn: "While using the app"
- runFlow:
    when:
      visible: "Only this time"
    commands:
      - tapOn: "Only this time"
- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"
- runFlow:
    when:
      visible: "Turn on"
    commands:
      - tapOn: "Turn on"
- runFlow:
    when:
      visible: "No thanks"
    commands:
      - tapOn: "No thanks"
- runFlow:
    when:
      visible: "Not now"
    commands:
      - tapOn: "Not now"
